# 3dPlatform

depth/: CMakeLists.txt  main.cpp
depth/include/: GenerateDepthImg.h
depth/src/: GenerateDepthImg.cpp
depthOnnx/onnx/: CMakeLists.txt  main.cpp
file/: 003createProject.sh  cuda.cpp  env.sh  open-dibr.patch
file/dibr/: Application.h  CMakeLists.txt  PCApplication.h  VRApplication.h  main.cpp
file/shell/: 001copyModifiedFile.sh  002getPatch.sh  004doPatch.sh  005compileInstall.sh
file/sunshine/cyf/: cuda.cpp  cuda.cu  cuda.h
file/sunshine/xys/: CMakeLists.txt  common.cmake  env.sh  linux.cmake  video.cpp
open-dibr/: CMakeLists.txt  build.sh  open-dibr.patch
open-dibr/src/: Application.h  PCApplication.h  VRApplication.h  main.cpp
sunshine/: CMakeLists.patch  CMakeLists.txt  cmake_compile_definitions.patch  cmake_targets.patch  env.sh  recompile_reinstall.sh  scripts.patch  src_platform_linux.patch  src_video.patch
sunshine/asset/: example_opengl_1k.json  example_opengl_2k.json  left_omaf_1k.json  left_omaf_2k.json  right_omaf_1k.json  right_omaf_2k.json
sunshine/cmake/compile_definitions/: linux.cmake
sunshine/cmake/targets/: common.cmake
sunshine/scripts/: linux_build.sh
sunshine/src/: utility.h  video.cpp
sunshine/src/platform/linux/: cuda.cpp  cuda.cu  cuda.h
